# eegauge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/design/: eegdash-backend.md
examples/: BNCI2014_001.md  ds002718.md  ds002718.provenance.json
src/bcicards/: __init__.py  benchmark.py  cards.py  cli.py  datasets.py  errors.py  io.py  metadata.py
src/bcicards/backends/: __init__.py  base.py  eegdash.py  moabb.py
src/eegauge/: __init__.py  benchmark.py  cli.py  errors.py  io.py  metadata.py  provenance.py
src/eegauge/backends/: __init__.py  base.py  moabb.py
tests/: test_backends.py  test_benchmark_mocked.py  test_cards.py  test_cli.py  test_datasets.py  test_io.py  test_provenance.py
