[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bci-dataset-cards"
version = "0.2.0"
description = "Generate plain-language dataset cards and simple baselines for public BCI datasets."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Ralph" }
]
keywords = ["bci", "eeg", "moabb", "mne", "benchmark", "dataset-cards"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
bci = [
  "matplotlib>=3.8",
  "mne>=1.6",
  "moabb>=1.1",
  "numpy>=1.26",
  "pandas>=2.0",
  "scikit-learn>=1.4",
]
test = [
  "pytest>=8.0",
]
lint = [
  "ruff>=0.6",
]
dev = [
  "matplotlib>=3.8",
  "mne>=1.6",
  "moabb>=1.1",
  "numpy>=1.26",
  "pandas>=2.0",
  "pytest>=8.0",
  "ruff>=0.6",
  "scikit-learn>=1.4",
]

[project.scripts]
bcicards = "bcicards.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear, C4: comprehensions
select = ["E", "W", "F", "I", "UP", "B", "C4"]
